############################################################################
# $tests/dummy$
# This cmake adds all dummy tests (tests which verifies only if depenendency
# is correctly added)
############################################################################

add_subdirectory(GTest)
add_subdirectory(StaticLib)